--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="http://masemason.github.io/mycorner/js/linksDataHandler.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="http://masemason.github.io/mycorner/css/gold_theme.css">
+		<link rel="stylesheet" href="http://masemason.github.io/css/gold_theme.css">
 
 		<script>
 		
