--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head>
-		<title>My Corner</title>
+		<title>Hate Means Love</title>
 		<link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="http://masemason.github.io/mycorner/css/animations.css">
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -93,7 +93,7 @@
 	<body>
 		<div class="container1">
 			<div class="titlebx stretchLeft">
-				<h1>Mason's Corner</h1>
+				<h1>Hate Means Love</h1>
 			</div>
 			<!--<div class="search">
 			<form id="cdesrchfrm" action="">
