--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Happy Birthday My KFP</title>
+    <title>David Mason</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -24,13 +24,6 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/creative.css" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
@@ -55,11 +48,6 @@
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
-                    <!-- 
-<li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
- -->
                     <li>
                         <a class="page-scroll" href="#portfolio">Pictures</a>
                     </li>
@@ -76,9 +64,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Happy Birthday my KFP</h1>
+                <h1>David Mason</h1>
                 <hr>
-                <p>Hate you...Enjoy!</p>
+                <p>Software Developer</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">What is this?</a>
             </div>
         </div>
