--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
     <aside class="bg-dark">
         <div class="container text-center" id="music">
             <div class="call-to-action">
-            	<audio controls autoplay loop>
+            	<!--<audio controls autoplay loop>
   					
  					 <source src="music/My Destiny.m4a" type="audio/mpeg">
 						Your browser does not support the audio element.
-				</audio>
+				</audio>-->
             </div>
         </div>
     </aside>
