--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="header-content-inner">
                 <h1>David Mason</h1>
                 <hr>
-                <p>Software Developer</p>
+                <p>Software/Web Developer</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">What is this?</a>
             </div>
         </div>
@@ -195,15 +195,15 @@
     </section>
 
     <aside class="bg-dark">
-        <div class="container text-center" id="music">
+        <!--<div class="container text-center" id="music">
             <div class="call-to-action">
-            	<!--<audio controls autoplay loop>
+            	<audio controls autoplay loop>
   					
  					 <source src="music/My Destiny.m4a" type="audio/mpeg">
 						Your browser does not support the audio element.
-				</audio>-->
+				</audio>
             </div>
-        </div>
+        </div>-->
     </aside>
 
    <!-- <section id="contact">
