--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">What is this?</h2>
                     <hr class="light">
-                    <p class="text-faded">A little website for you. Hope you like it.</p>
+                    <p class="text-faded">website</p>
                     <a href="#portfolio" class="btn btn-default btn-xl page-scroll">See Pictures</a>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                                     Oooooooo
                                 </div>
                                 <div class="project-name">
-                                    SEXY!
+                                    wuutttt
                                 </div>
                             </div>
                         </div>
@@ -112,10 +112,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Kisses
+                                    ay
                                 </div>
                                 <div class="project-name">
-                                    ...and an achy neck :-P
+                                    some
                                 </div>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                                     Look over here...
                                 </div>
                                 <div class="project-name">
-                                    ...Smell My Breath...HAAAAAA
+                                    what
                                 </div>
                             </div>
                         </div>
@@ -146,10 +146,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    こんにちは
+                                    here
                                 </div>
                                 <div class="project-name">
-                                    Ninja Assassin and the sidekick :-D
+                                    something
                                 </div>
                             </div>
                         </div>
@@ -163,10 +163,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Hugs
+                                    ay
                                 </div>
                                 <div class="project-name">
-                                    ....Are you asleep under that hat?
+                                   what
                                 </div>
                             </div>
                         </div>
@@ -180,10 +180,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Despicable Us
+                                    nope
                                 </div>
                                 <div class="project-name">
-                                   Our best friend 
+                                   go 
                                 </div>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
             <div class="call-to-action">
             	<audio controls autoplay loop>
   					
- 					 <source src="music/My Destiny.m4a" type="audio/mpeg">
+ 					 <source src="music/" type="audio/mpeg">
 						Your browser does not support the audio element.
 				</audio>
             </div>
